--- a/lab05/zhu-bio.html
+++ b/lab05/zhu-bio.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <img src="../images/self.png" alt="self image">
+    <img src="../images/self.png" alt="self image" width="1024">
 <h1>
     Wanting Zhu's Biography
 </h1>
